# pip-stale

./: .gitignore  HISTORY.rst  Makefile  README.rst  example_requirements.in  justfile  pip_stale.py  pyproject.toml
.github/workflows/: main.yml
pip_stale/: __init__.py  main.py
tests/: create_data.py  pypi_output.yaml  requirements.txt  test_cmd.py
