[project]
name = "pip-stale"
description = "Lists stale requirements and upgrade options"
version = "0.0.1"
readme = "README.rst"
keywords = ["pip", "dependencies", "stale"]
authors = [{name = "Will Kahn-Greene"}]
license = {text = "MPLv2"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "packaging",
    "requests",
    "rich",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.Homepage = "https://github.com/willkg/pip-stale"
urls.Source = "https://github.com/willkg/pip-stale/"
urls.Issues = "https://github.com/willkg/pip-stale/issues"

[project.scripts]
pip-stale = "pip_stale.main:pip_stale_main"

[project.optional-dependencies]
dev = [
    "build",
    "check-manifest",
    "cogapp",
    "pytest",
    "responses",
    "ruff",
    "tox",
    "tox-gh-actions",
    'tomli >= 1.1.0; python_version < "3.11"',
    "tox-uv",
    "twine",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py38"
src = ["pip_stale"]
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py38
    py38-lint
    py39
    py310
    py311
    py312
isolated_build = True
uv_python_preference = only_managed

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
extras = dev
commands = pytest {posargs} tests/

[testenv:py38-lint]
extras = dev
basepython = python3.8
changedir = {toxinidir}
commands =
    ruff format --check pip_stale tests
    ruff check pip_stale tests
"""
